syntax = "proto3";
option go_package = "https://github.com/Juules32/GRPC/proto";
package proto;

service StreamingService
{
    rpc StreamData(stream DataRequest) returns (stream DataResponse);
}

message DataRequest {
    string clientName = 1;
    string message = 2;
}

message DataResponse {
    string message = 1;
}

